# LDWS

./: landslide_db.yml
LDWS/: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  dockerfile-python.dockerfile  pyproject.toml  star-schema.pbix
LDWS/alembic/: env.py
LDWS/alembic/versions/: d4d46305814b_init.py
LDWS/app/: lifecycle.py  main.py
LDWS/app/api/: deps.py  router.py
LDWS/app/core/: config.py  constants.py  enums.py  exceptions.py  logging.py  security.py
LDWS/app/db/: base.py  session.py
LDWS/app/permissions/: __init__.py  authz.py  roles.py  station_scope.py
LDWS/app/pipeline/: contracts.py
LDWS/app/schemas/: __init__.py  alert_event.py  alert_level.py  alert_status.py  area.py  auth.py  common.py  derived_feature.py  sensor.py  sensor_reading.py  sensor_type.py  station.py  telegram_channel.py  user.py
LDWS/app/services/: __init__.py  alert_event_service.py  alert_level_service.py  alert_status_service.py  area_service.py  auth_service.py  dashboard_service.py  derived_feature_service.py  sensor_reading_service.py  sensor_service.py  sensor_type_service.py  station_service.py  telegram_channels_service.py  telegram_delivery_service.py  user_service.py
LDWS/consumer/: kafka_to_minio.py  mqtt_to_db.py
LDWS/data/processed/: vietnam_stations.csv
LDWS/data/raw/: __init__.py
LDWS/data_generator/: mock_data_generator.py  mqtt_sensor_clients.py
LDWS/kafka_debezium/: generate_and_post_connector.py
LDWS/landslide_dbt/: dbt_project.yml
LDWS/postgres/: continuous_aggregates.sql  landslide_timescaledb_schema.sql  seed_data.sql
LDWS/scripts/: create_station_admin.py  create_super_admin.py  extract_vn_stations.py  seed_areas.py  seed_stations.py  send_pending_alerts.py  send_sample_alert.py  send_test_telegram_message.py
(+78 files in other folders)
