[project]
name = "ldws"
version = "0.1.0"
description = "Landslide Detection and Warning System - Back-end"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "bcrypt==4.0.1",
    "fastapi[standard]>=0.135.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary]>=3.3.3",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.48",
]
