[project]
name = "ldws"
version = "0.1.0"
description = "Landslide Detection and Warning System - Back-end"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "apache-airflow>=3.2.1",
    "bcrypt==4.0.1",
    "boto3>=1.43.14",
    "dbt-snowflake>=1.11.5",
    "fastapi[standard]>=0.135.1",
    "fastparquet>=2026.5.0",
    "httpx>=0.28.1",
    "kafka-python>=2.3.1",
    "paho-mqtt>=2.1.0",
    "pandas>=3.0.2",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2>=2.9.12",
    "psycopg[binary]>=3.3.3",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
    "python-multipart>=0.0.22",
    "requests>=2.34.2",
    "snowflake-connector-python>=4.5.0",
    "sqlalchemy>=2.0.48",
]
